// Copyright 2019 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package data_channel;

service DataChanneler {
  rpc UploadData (stream DataRequest) returns (DataResult);
  rpc DownloadResults (DataRequest) returns (stream DataResult);
}

message DataRequest {
  bytes value = 1;
}

message DataResult {
  int32 bytes_processed = 1;
}
